get message from laravel via rabbitMQ and send email
