# docs/swagger.json
@@ -40,7 +40,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.statusResponce"
+                            "$ref": "#/definitions/handler.StatusResponce"
                         }
                     }
                 }
@@ -74,7 +74,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.statusResponce"
+                            "$ref": "#/definitions/handler.StatusResponce"
                         }
                     }
                 }
@@ -108,13 +108,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.statusResponce"
+                            "$ref": "#/definitions/handler.StatusResponce"
                         }
                     }
                 }
             }
         },
-        "/mail/": {
+        "/mail": {
             "get": {
                 "description": "send email",
                 "consumes": [
@@ -131,7 +131,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.statusResponce"
+                            "$ref": "#/definitions/handler.StatusResponce"
                         }
                     }
                 }
@@ -168,7 +168,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.statusResponce"
+                            "$ref": "#/definitions/handler.StatusResponce"
                         }
                     }
                 }
@@ -196,7 +196,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.statusResponce"
+                            "$ref": "#/definitions/handler.StatusResponce"
                         }
                     }
                 }
@@ -234,7 +234,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.statusResponce"
+                            "$ref": "#/definitions/handler.StatusResponce"
                         }
                     }
                 }
@@ -271,7 +271,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.statusResponce"
+                            "$ref": "#/definitions/handler.StatusResponce"
                         }
                     }
                 }
@@ -308,7 +308,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.statusResponce"
+                            "$ref": "#/definitions/handler.StatusResponce"
                         }
                     }
                 }
@@ -353,7 +353,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.statusResponce"
+                            "$ref": "#/definitions/handler.StatusResponce"
                         }
                     }
                 }
@@ -388,7 +388,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.statusResponce"
+                            "$ref": "#/definitions/handler.StatusResponce"
                         }
                     }
                 }
@@ -420,6 +420,18 @@
                 }
             }
         },
+        "handler.StatusResponce": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "boolean"
+                }
+            }
+        },
         "handler.UpdateUser": {
             "type": "object",
             "properties": {
@@ -445,18 +457,6 @@
                 "password": {
                     "type": "string",
                     "example": "123123"
-                }
-            }
-        },
-        "handler.statusResponce": {
-            "type": "object",
-            "properties": {
-                "data": {},
-                "message": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "boolean"
                 }
             }
         }
